--- a/angular2/src/app/user/settings.component.html
+++ b/angular2/src/app/user/settings.component.html
@@ -24,7 +24,7 @@
                   <input type="text" formControlName="bio" value="{{user.bio}}"><br>
                   <button type="submit" class="btn-save">save changes</button>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 ava">
                   <div class="avatar">
                     <img src="{{user.avatar.url}}" onError="this.src='./assets/images/avatar.png';" class="user-profile-avatar" alt="Default avatar" id="avatar-default">
                     <label type="button"><i class="fa fa-pencil"></i>
