--- a/my-tinycards-api/app/views/admins/registrations/new.html.erb
+++ b/my-tinycards-api/app/views/admins/registrations/new.html.erb
@@ -1,29 +1,38 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="card login-form shadow-nohover">
+    <div class="text-center login-form-label">Create your account</div>
+    <div class="text-center">
+      Already have an account?
+      <%= render "admins/shared/links" %>
+    </div>
+    <div class="devide-login">
+      <div class="devide-text">or</div>
+    </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+      <div class="form-group">
+        <label for="user_email">Email address</label>
+        <%= f.email_field :email, autofocus: true, class: "form-control", placeholder:"Enter email" %>
+      </div>
+
+      <div class="form-group">
+        <label for="user_password">Password<% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br /></label>
+        <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Password confirm" %>
+      </div>
+
+      <div class="form-group">
+        <label for="user_password">Password<% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br /></label>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Password" %>
+      </div>
+
+      <button type="submit" class="btn btn-block btn-custome">SIGN UP</button>
+    <% end %>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "admins/shared/links" %>
