--- a/my-tinycards-api/app/assets/stylesheets/application.css
+++ b/my-tinycards-api/app/assets/stylesheets/application.css
@@ -12,6 +12,9 @@
  *
  *= require_tree .
  *= require_self
+ *= require_light-bootstrap-dashboard
+ *= require_demo
+ *= require_bootstrap.min
  */
 @import "bootstrap";
 @import "font-awesome";
