--- a/my-tinycards-api/app/views/admins/decks/index.html.erb
+++ b/my-tinycards-api/app/views/admins/decks/index.html.erb
@@ -13,9 +13,11 @@
           <table class="table table-hover">
               <thead>
                 <th style="width: 12%">Image Cover Deck</th>
-                <th style="width: 25%">Author</th>
-                <th style="width: 20%">Deck title</th>
-                <th style="width: 20%">Cards</th>
+                <th style="width: 15%">Author</th>
+                <th style="width: 15%">Deck title</th>
+                <th style="width: 10%">Cards</th>
+                <th style="width: 20%">Created at</th>
+                <th style="width: 20%">Updated at</th>
                 <th>Action</th>
               </thead>
               <tbody>
