--- a/my-tinycards-api/app/views/admins/feed_backs/index.html.erb
+++ b/my-tinycards-api/app/views/admins/feed_backs/index.html.erb
@@ -9,7 +9,7 @@
               <thead>
                 <th style="width: 15%">Avata User</th>
                 <th style="width: 20%">Username</th>
-                <th style="width: 20%">Deck number</th>
+                <th style="width: 20%">Deck title</th>
                 <th>Info feedback</th>
               </thead>
               <tbody>
