--- a/my-tinycards-api/app/views/admins/users/_user.html.erb
+++ b/my-tinycards-api/app/views/admins/users/_user.html.erb
@@ -10,6 +10,12 @@
     <%= user.email %>
   </td>
   <td>
+    <%= user.created_at %>
+  </td>
+  <td>
+    <%= user.updated_at %>
+  </td>
+  <td>
     <%= user.decks.size %>
   </td>
   <td>
