--- a/my-tinycards-api/app/views/admins/users/index.html.erb
+++ b/my-tinycards-api/app/views/admins/users/index.html.erb
@@ -13,9 +13,11 @@
           <table class="table table-hover">
               <thead>
                 <th>ID</th>
-                <th>Username</th>
-                <th>Email</th>
-                <th>Decks</th>
+                <th style="width: 15%">Username</th>
+                <th style="width: 20%">Email</th>
+                <th style="width: 20%">Created at</th>
+                <th style="width: 20%">Updated at</th>
+                <th style="width: 15%">Decks</th>
                 <th>Action</th>
               </thead>
               <tbody>
