--- a/angular2/src/app/card-advance/card-advance.component.css
+++ b/angular2/src/app/card-advance/card-advance.component.css
@@ -187,3 +187,31 @@
   opacity: 0.8;
   text-align: center;
 }
+
+@media only screen and (max-width: 450px) {
+  .n-card {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+  .n-card:hover {
+    background-color: #fff !important;
+  }
+  .wrapper .front-card {
+    flex: 5;
+  }
+  .wrapper .back-card {
+    flex: 5;
+  }
+  .wrapper .number {
+    flex: 0;
+  }
+  .f-deck {
+    height: 220px !important;
+  }
+  .f-deck .back {
+    padding-top: 90px !important;
+  }
+  .f-deck .image {
+    width: 130px !important;
+  }
+}
