--- a/angular2/src/app/card/card.component.css
+++ b/angular2/src/app/card/card.component.css
@@ -204,6 +204,9 @@
   .f-deck .back {
     padding-top: 90px !important;
   }
+  .f-deck textarea {
+    font-size: 16px !important;
+  }
   .f-deck .image {
     width: 130px !important;
   }
