--- a/angular2/src/app/create-deck-advance/create-deck-advance.component.css
+++ b/angular2/src/app/create-deck-advance/create-deck-advance.component.css
@@ -18,7 +18,7 @@
   font-family: DINNextRoundedLTPro-Medium, sans-serif;
 }
 .left .txt input:focus{
-  border-bottom: 2px solid #32cdff;
+  border-bottom: 2px solid #276d8c;
   font-family: DINNextRoundedLTPro-Medium, sans-serif;
   opacity: .9;
 }
@@ -60,16 +60,16 @@
   outline: none;
 }
 .left .txt .btn-ct .btn-ct-publ {
-  background-color: #32cdff;
+  background-color: #276d8c;
   border-radius: 12px;
-  border: 2px solid #32cdff;
+  border: 2px solid #276d8c;
   cursor: pointer;
   font-weight: bold;
   opacity: 0.7;
   width: 100%;
 }
 .left .txt .btn-ct .fa-cog {
-  color: #32cdff;
+  color: #276d8c;
 }
 .left .cover-deck {
   background-color: #fff;
@@ -92,7 +92,7 @@
   width: 100%;
 }
 .left .cover-deck .import-cover-deck .ct-text {
-  color: #32cdff;
+  color: #276d8c;
   font-weight: bold;
   margin-top: 10px;
 }
@@ -145,7 +145,7 @@
   cursor: pointer;
 }
 .add {
-  background-color: #32cdff;
+  background-color: #276d8c;
   border-radius: 100%;
   border: none;
   box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.18);
@@ -177,7 +177,7 @@
   outline: none;
 }
 .del .fa-trash-o {
-  color: #32cdff;
+  color: #276d8c;
   font-size: 25px;
   opacity: 0;
 }
@@ -205,7 +205,7 @@
   outline: none;
 }
 .right .wrapper .list-option .del .fa-trash-o {
-  color: #32cdff;
+  color: #276d8c;
   font-size: 25px;
   opacity: 0.7;
 }
@@ -243,5 +243,102 @@
 
   .right .wrapper .f-deck {
     height: 255px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .container {
+    padding: 0 !important;
+    background-color: #fff;
+  }
+  .row {
+    margin-top: 0px !important;
+    margin: auto !important;
+    width: 100% !important;
+  }
+  .cover-deck {
+    margin: auto !important;
+    display: block !important;
+    width: 230px !important;
+  }
+
+  .add-card {
+    position: absolute;
+    top: 95px;
+    right: 100px;
+  }
+
+  .panel-heading span {
+    margin-top: -10px;
+    margin-right: 10px;
+  }
+
+  .right {
+    border-radius: 0;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    margin-top: 0;
+    min-height: 270px;
+  }
+  .left {
+    background-color: #fff;
+  }
+
+  .bod {
+    border-bottom: 1px solid #9d9a9a33;
+  }
+
+  .pad-top-10 {
+    padding-top: 10px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    padding: 0 !important;
+    background-color: #fff;
+  }
+  .row {
+    margin-top: 0px !important;
+    margin: auto !important;
+    width: 100% !important;
+  }
+  .cover-deck {
+    margin: auto !important;
+    display: block !important;
+    width: 230px !important;
+  }
+
+  .add-card {
+    position: absolute;
+    top: 95px;
+    right: 100px;
+  }
+
+  .panel-heading span {
+    margin-top: -10px;
+    margin-right: 10px;
+  }
+
+  .right {
+    border-radius: 0;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    margin-top: 0;
+    min-height: 270px;
+  }
+  .left {
+    background-color: #fff;
+  }
+
+  .bod {
+    border-bottom: 1px solid #9d9a9a33;
+  }
+
+  .pad-top-10 {
+    padding-top: 10px;
+  }
+
+  .txt {
+    width: 65%;
+    margin: auto !important;
+    display: block;
   }
 }
