--- a/my-tinycards-api/app/assets/stylesheets/custom.css
+++ b/my-tinycards-api/app/assets/stylesheets/custom.css
@@ -24,7 +24,6 @@ body {
   background-color: #F7F7F7;
   margin: 0px;
   color: #5c5c5c;
-  font-family: DINNextRoundedLTPro-Regular, sans-serif;
   line-height: 1.5;
 }
 body a:link, body a:visited, body a:hover {
@@ -40,7 +39,7 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
 }
 
 .list-card {
-  margin: 20px;
+  padding: 10px;
 }
 .list-card .item-card {
   background-color: blanchedalmond;
@@ -50,8 +49,11 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
   cursor: pointer;
 }
 .list-card .item-card img {
-  margin-bottom: 20px;
-  width: 100%;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  width: 70%;
+  height: 160px;
 }
 
 .animation {
@@ -113,6 +115,7 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
   -moz-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
 }
 
 .ct-card .front {
@@ -123,7 +126,6 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
 
 .ct-card .back {
   background-color: #fff;
-  background: while;
   color: black;
   opacity: 0.8;
   -webkit-transform: rotateY(180deg);
@@ -811,4 +813,8 @@ footer .quick-links .link-item {
   border-bottom: 4px solid #32cdff;
   color: #32cdff;
   padding-bottom: 11px;
+}
+
+.deck-title {
+  font-size: 30px;
 }
