--- a/angular2/src/app/edit-deck/edit-deck.component.css
+++ b/angular2/src/app/edit-deck/edit-deck.component.css
@@ -61,13 +61,13 @@
 }
 .left .txt .btn-ct .btn-ct-publ {
   background-color: #32cdff;
-  border-radius: 12px;
+  border-radius: 4px;
   border: 2px solid #32cdff;
   cursor: pointer;
   font-weight: bold;
   margin-left: 8px;
-  opacity: 0.7;
-  width: 78%;
+  opacity: 0.8;
+  width: 81%;
 }
 .left .txt .btn-ct .fa-cog {
   color: #32cdff;
@@ -289,5 +289,58 @@
 
   .pad-top-10 {
     padding-top: 10px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    padding: 0 !important;
+    background-color: #fff;
+  }
+  .row {
+    margin-top: 0px !important;
+    margin: auto !important;
+    width: 100% !important;
+  }
+  .cover-deck {
+    margin: auto !important;
+    display: block !important;
+    width: 230px !important;
+  }
+
+  .add-card {
+    position: absolute;
+    top: 95px;
+    right: 100px;
+  }
+
+  .panel-heading span {
+    margin-top: -10px;
+    margin-right: 10px;
+  }
+
+  .right {
+    border-radius: 0;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    margin-top: 0;
+    min-height: 270px;
+  }
+  .left {
+    background-color: #fff;
+  }
+
+  .bod {
+    border-bottom: 1px solid #9d9a9a33;
+  }
+
+  .pad-top-10 {
+    padding-top: 10px;
+  }
+  .txt {
+    width: 60% !important;
+    margin: auto !important;
+  }
+  .btn-ct-publ {
+    width: 88% !important;
   }
 }
