--- a/angular2/src/app/app.component.css
+++ b/angular2/src/app/app.component.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  background-color: #F7F7F7 !important;
+  background-color: #F7F7F7;
   margin: 0px;
   color: #5c5c5c;
   font-family: DINNextRoundedLTPro-Regular, sans-serif;
@@ -40,19 +40,34 @@ footer .quick-links .link-item {
   margin: 20px;
   padding: 15px;
 }
+.viw {
+  background-color: #F7F7F7;
+}
 
 @media only screen and (max-width: 450px) {
   .container {
     padding: 0;
   }
 
-  footer .quick-links {
-    display: flex;
-    width: 100%;
+  footer {
+    display: none;
   }
 
-  footer .quick-links .link-item {
-    margin: 0 !important;
-    padding: 10px !important;
+  .viw {
+    background-color: #fff !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    padding: 0;
+  }
+
+  footer {
+    display: none;
+  }
+
+  .viw {
+    background-color: #fff !important;
   }
 }
