--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <app-header>
 </app-header>
-<div style="min-height:775px; background-color: #F7F7F7">
+<div class="viw" style="min-height:775px;">
   <div class="container" style="margin-top: 60px;">
     <router-outlet>
     </router-outlet>
