--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -40,7 +40,7 @@
         <div class="container" style="width: 100%; margin: auto">
           <div id="b1" class="containerTab">
             <div class="list-lesson">
-              <div class="col-xs-6 col-md-3 lesson-item" *ngFor= "let lesson of lessons; let i=index">
+              <div class="col-xs-6 col-sm-4 col-md-3 lesson-item" *ngFor= "let lesson of lessons; let i=index">
               <form   *ngIf="lesson.current_user_lesson" [formGroup]="myFormLesson" novalidate (click)="click_lesson(lesson.id, myFormLesson)">
                 <div class="_1vqs9">
                   <div class="_1iWkj _34_xG"><div class="_2zwto _1QXgH"></div><div class="_1XPsL _1QXgH"></div><div class="oSJeW _1QXgH"></div>
