--- a/angular2/src/app/header/header.component.css
+++ b/angular2/src/app/header/header.component.css
@@ -155,6 +155,25 @@ footer .quick-links .link-item {
   .logo a {
     padding-left: 5px;
   }
+
+  .nav-item a {
+    padding: 15px !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  span {
+    display: none;
+  }
+  a {
+    font-size: 30px !important;
+    height: 100%;
+    margin-right: 25px;
+  }
+  .logo a {
+    padding-left: 10px;
+    margin-right: 0 !important;
+  }
 }
 
 @media only screen and (max-width: 450px) {
