--- a/angular2/src/app/user/settings.component.css
+++ b/angular2/src/app/user/settings.component.css
@@ -119,6 +119,36 @@
   color: #32cdff !important;
 }
 
+@media only screen and (max-width: 768px) {
+  .row {
+    background-color: #fff !important;
+  }
+  .nav-list {
+    display: none;
+  }
+
+  #a2 {
+    display: block !important;
+  }
+
+  .wrapper {
+    padding: 0;
+    margin: 0;
+  }
+
+  .change {
+    border-radius: 0 !important;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0) !important;
+  }
+
+  .ava {
+    margin: 30px;
+  }
+  .ava label {
+    left: 55% !important;
+  }
+}
+
 @media only screen and (max-width: 450px) {
   .row {
     background-color: #fff !important;
