fix layout admin

--- a/my-tinycards-api/app/views/admins/decks/_deck.html.erb
+++ b/my-tinycards-api/app/views/admins/decks/_deck.html.erb
@@ -1,20 +1,23 @@
-<div id="post-<%= deck.id %>">
-  <div div="box-post">
-    <%= link_to image_tag(deck.user.avatar, class: "avatar-post") %>
-    <h3 class="user-name"><%= link_to deck.user.name %></h3>
-    <h2 class="post-title"><%= link_to deck.title %>
-      <% if deck.cards.any? %>
-        <span class="badge badge-info">
-          <%= deck.cards.size %>
-        </span>
-      <% end %>
-    </h2>
-    <span>
+<tr id="post-<%= deck.id %>">
+  <td>
+    <%= link_to image_tag(deck.cover_image, class: "avatar-post") %>
+  </td>
+  <td>
+    <%= link_to image_tag(deck.user.avatar, class: "avatar") %>
+    <%= link_to deck.user.name %>
+  </td>
+  <td>
+    <%= link_to deck.title %>
+  </td>
+  <td>
+    <%= deck.cards.size %>
+  </td>
+  <td>
+    <% if current_admin %>
       <% if current_admin %>
         <%= link_to "Delete", admins_deck_path(deck), method: :delete, remote: true,
-         data: {confirm: "Are you sure"}, class: "btn btn-danger button_text" %>
+         data: {confirm: "Are you sure delete it?"}, class: "btn btn-danger button_text" %>
       <% end %>
-    </span>
-    <hr>
-  </div>
-</div>
+    <% end %>
+  </td>
+</tr>
