--- a/my-tinycards-api/app/assets/stylesheets/admins/admins.scss
+++ b/my-tinycards-api/app/assets/stylesheets/admins/admins.scss
@@ -1,7 +1,5 @@
 .avatar-post {
-  border-radius: 100%;
-  height: 80px;
-  margin-left: -90px;
-  position: absolute;
-  width: 80px;
+  height: 100px;
+  width: 90px;
+  border-radius: 10px;
 }
