--- a/my-tinycards-api/app/assets/stylesheets/custom.css
+++ b/my-tinycards-api/app/assets/stylesheets/custom.css
@@ -595,12 +595,13 @@ footer .quick-links .link-item {
 
 /* Sign in form*/
 .login-form {
-  margin-top: 40px;
-  padding: 35px;
+  background-color: #fff;
   border-radius: 20px;
-  width: 300px;
+  height: 450px;
   margin-top: 30px;
   margin: auto;
+  padding: 35px;
+  width: 350px;
 }
 
 .login-form-label {
@@ -656,7 +657,7 @@ footer .quick-links .link-item {
 
 .btn-custome {
   background-color: #32cdff;
-  border-radius: 10px;
+  border-radius: 4px;
   color: #fff;
   font-family: DINNextRoundedLTPro-Bold,sans-serif;
   font-size: 15px;
@@ -813,159 +814,7 @@ footer .quick-links .link-item {
   color: #32cdff;
   padding-bottom: 11px;
 }
-/* Sign in form*/
-.login-form {
-  margin-top: 40px;
-  padding: 35px;
-  border-radius: 20px;
-  background-color: #fff;
-  height: 450px;
-}
-.login-form button {
-  outline: none;
-}
 
-.login-form-label {
-  color: #5c5c5c;
-  font-family: DINNextRoundedLTPro-Medium,sans-serif;
-  font-size: 21px;
-  margin-bottom: 15px;
-}
-
-.social-login {
-  margin-top: 20px;
-}
-
-.btn-social-signin {
-  border: none;
-  border-radius: 10px;
-  color: #fff;
-  font-family: DINNextRoundedLTPro-Bold,sans-serif;
-  font-size: 15px;
-  padding: 12px 0 8px;
-  text-align: center;
-  text-transform: uppercase;
-  margin-bottom: 12px;
-}
-
-.google-signin {
-  background-color: #df360a;
-}
-
-.facebook-signin {
-  background-color: #39559f;
-}
-
-.devide-login {
-  border-bottom: 1px solid #e8e8e8;
-  margin: 30px 0;
-  position: relative;
-}
-
-.devide-text {
-  background-color: #fff;
-  color: #898989;
-  font-family: DINNextRoundedLTPro-Medium,sans-serif;
-  font-size: 21px;
-  left: 50%;
-  padding: 0 10px;
-  position: absolute;
-  top: -12px;
-  -webkit-transform: translateX(-50%);
-  text-transform: uppercase;
-  transform: translateX(-50%);
-}
-
-.btn-custome {
-  background-color: #32cdff;
-  border-radius: 10px;
-  color: #fff;
-  font-family: DINNextRoundedLTPro-Bold,sans-serif;
-  font-size: 15px;
-  padding: 12px 0 8px;
-  text-align: center;
-}
-.btn-custome:hover {
-  filter: brightness(95%);
-}
-
-.link-custome {
-  background-color: transparent;
-  border: none;
-  color: #32cdff;
-  font-family: DINNextRoundedLTPro-Bold,sans-serif;
-  text-transform: uppercase;
-}
-.link-custome:hover {
-  color: #32cdff;
-  text-decoration: none;
-  filter: brightness(95%);
-}
-
-.shadow {
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-  transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.shadow:hover {
-  box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
-}
-
-.shadow-nohover {
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-  transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-control {
-  display: block;
-  width: 91%;
-  height: 34px;
-  padding: 0 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-}
-
-label {
-  display: inline-block;
-  max-width: 100%;
-  margin-bottom: 5px;
-  font-weight: 700;
-}
-.btn-custome {
-  -moz-user-select: none;
-  -ms-touch-action: manipulation;
-  -ms-user-select: none;
-  -webkit-user-select: none;
-  background-color: #32cdff;
-  background-image: none;
-  border-radius: 10px;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  color: #fff;
-  cursor: pointer;
-  display: block;
-  font-family: DINNextRoundedLTPro-Bold,sans-serif;
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 1.42857143;
-  margin-bottom: 0;
-  padding: 12px 0 8px;
-  text-align: center;
-  touch-action: manipulation;
-  user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-  width: 100%;
-}
-.form-group {
-    margin-bottom: 15px;
-}
-.text-center {
-  text-align: center;
+.deck-title {
+  font-size: 30px;
 }
