--- a/my-tinycards-api/app/views/admins/feed_backs/_feed_back.html.erb
+++ b/my-tinycards-api/app/views/admins/feed_backs/_feed_back.html.erb
@@ -1,7 +1,14 @@
-<div div="box-post">
-  <%= link_to image_tag(feed_back.user.avatar, class: "avatar-post") %>
-  <h3 class="user-name"><%= link_to feed_back.user.name %></h3>
-  <h3 class="user-name"><%= link_to feed_back.deck.title, admins_deck_path(feed_back.deck) %></h3>
-  <h2 class="post-title"><%= feed_back.status %></h2>
-  <hr>
-</div>
+<tr>
+  <td>
+    <%= link_to image_tag(feed_back.user.avatar, class: "avatar-post") %>
+  </td>
+  <td>
+    <%= link_to feed_back.user.name %>
+  </td>
+  <td>
+    <%= link_to feed_back.deck.title, admins_deck_path(feed_back.deck) %>
+  </td>
+  <td>
+    <%= feed_back.status %>
+  </td>
+</tr>
