--- a/my-tinycards-api/app/views/admins/users/_user.html.erb
+++ b/my-tinycards-api/app/views/admins/users/_user.html.erb
@@ -1,5 +1,9 @@
 <tr id="<%= user.id %>">
   <td>
+    <%= link_to user.id %>
+  </td>
+  <td>
+    <%= link_to image_tag(user.avatar, class: "avatar") %>
     <%= link_to user.name %>
   </td>
   <td>
@@ -11,7 +15,7 @@
   <td>
     <% if current_admin %>
       <%= link_to "Delete", admins_user_path(user), method: :delete, remote: true,
-        data: {confirm: "Are you sure"}, class: "btn btn-danger button_text" %>
+        data: {confirm: "Are you sure delete it?"}, class: "btn btn-danger button_text" %>
     <% end %>
   </td>
 </tr>
