--- a/my-tinycards-api/app/views/admins/users/index.html.erb
+++ b/my-tinycards-api/app/views/admins/users/index.html.erb
@@ -1,29 +1,29 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-9">
-      <div class="main-box-body clearfix">
-        <div class="table-responsive">
-        <p>
-          <%= t ".download" %>:
-          <%= link_to t(".csv"), admins_users_path(format: "csv") %> |
-          <%= link_to t(".excel"), admins_users_path(format: "xls") %>
-        </p>
-          <table class="table user-list" id="my-users">
-            <thead>
-              <tr id="my-users">
-                <th>User</th>
+<div class="row">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="header">
+          <h4 class="title" style="font-size: 25px">List users</h4>
+          <p>
+            <%= t ".download" %>:
+            <%= link_to t(".csv"), admins_users_path(format: "csv") %> |
+            <%= link_to t(".excel"), admins_users_path(format: "xls") %>
+          </p>
+        </div>
+      <div class="content table-responsive table-full-width">
+          <table class="table table-hover">
+              <thead>
+                <th>ID</th>
+                <th>Username</th>
                 <th>Email</th>
                 <th>Decks</th>
                 <th>Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% if @users.any? %>
-                <div><%= render @users %></div>
-              <% end %>
-            </tbody>
+              </thead>
+              <tbody>
+                <% if @users.any? %>
+                  <div><%= render @users %></div>
+                <% end %>
+              </tbody>
           </table>
-        </div>
       </div>
     </div>
   </div>
