--- a/my-tinycards-api/app/assets/stylesheets/custom.css
+++ b/my-tinycards-api/app/assets/stylesheets/custom.css
@@ -39,7 +39,7 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
 }
 
 .list-card {
-  margin: 20px;
+  padding: 10px;
 }
 .list-card .item-card {
   background-color: blanchedalmond;
@@ -49,8 +49,11 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
   cursor: pointer;
 }
 .list-card .item-card img {
-  margin-bottom: 20px;
-  width: 100%;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  width: 70%;
+  height: 160px;
 }
 
 .animation {
@@ -112,15 +115,17 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
   -moz-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
-  box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
 }
 
 .ct-card .front {
-  background: #a3a3a3;
+  background-color: #fff;
+  color: black;
+  opacity: .8;
 }
 
 .ct-card .back {
-  background: while;
+  background-color: #fff;
   color: black;
   opacity: 0.8;
   -webkit-transform: rotateY(180deg);
@@ -128,16 +133,11 @@ a:focus, button:focus, input:focus, div:focus, textarea:focus {
   -o-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
-
-.del {
-  background-color: white;
-  border: none;
-  outline: none;
-}
-.del .fa-trash-o {
-  color: #32cdff;
-  font-size: 25px;
-  opacity: 0;
+.ct-card .back p {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .left {
