--- a/my-tinycards-api/app/views/admins/decks/_deck.html.erb
+++ b/my-tinycards-api/app/views/admins/decks/_deck.html.erb
@@ -1,13 +1,13 @@
 <tr id="post-<%= deck.id %>">
   <td>
-    <%= link_to image_tag(deck.cover_image, class: "avatar-post") %>
+    <%= link_to image_tag(deck.cover_image, class: "avatar-post"), admins_deck_path(deck) %>
   </td>
   <td>
     <%= link_to image_tag(deck.user.avatar, class: "avatar") %>
     <%= link_to deck.user.name %>
   </td>
   <td>
-    <%= link_to deck.title %>
+    <%= link_to deck.title, admins_deck_path(deck) %>
   </td>
   <td>
     <%= deck.cards.size %>
