--- a/my-tinycards-api/app/views/shared/_menu_admin.html.erb
+++ b/my-tinycards-api/app/views/shared/_menu_admin.html.erb
@@ -5,7 +5,7 @@
     </div>
     <ul class="nav">
       <li>
-        <%= link_to "#" do %>
+        <%= link_to admins_dashboards_path do %>
           <span><i class="pe-7s-graph"></i>Dashboard</span>
         <% end %>
       </li>
