--- a/angular2/src/styles.css
+++ b/angular2/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 .slick-prev:before, .slick-next:before {
   color: #32CDFF !important;
 }
